<resources>
    <string name="app_name">Respawn Control</string>
    <string name="time_trial">Time Trial</string>
    <string name="infinite">Infinite</string>
    <string name="how_many_calculations">How many calculations would you like to do?</string>
    <string name="calculation_leaderboard">(There is no leaderboard for custom amount.)</string>
    <string name="what_types_of_items">What types of items to include?</string>
    <!--    <string name="item_type_leaderboard">(Tick only and every type with \"L\" mark to appear in leaderboards.)</string>-->
    <string name="weapons">Weapons</string>
    <string name="other_health">Other Health</string>
    <string name="mega_health">Mega Health</string>
    <string name="red_armor">Red Armor</string>
    <string name="other_armor">Other Armor</string>
    <string name="thirty">30</string>
    <string name="fifty">50</string>
    <string name="hundred">100</string>
    <string name="custom">Custom</string>
    <string name="custom_amount">Custom amount:</string>
    <string name="OK">OK</string>
    <string name="powerups">Powerups</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_other_error">Sign in failed for unknown reason.</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="stats">Stats</string>
    <string name="tab_title_item_stats">Items</string>
    <string name="tab_title_scores">Scores</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
